--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="#">WebStudio</a>
+                    <a href="#"><span class="blue">Web</span><span class="black2">Studio</span></a>
                 </li>
                 <li>
                     <a href="#">Студія</a>
@@ -86,7 +86,7 @@
 </section>
 </main>
      <footer>
-    <a href="#">WebStudio</a>
+    <a href="#"><span class="blue2">Web</span><span class="white">Studio</span></a>
  
     <address>
             м. Київ, пр-т Лесі Українки, 26
