--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li>
-                    <a href="./index.html">WebStudio</a>
+                    <a href="./index.html"><span class="blue">Web</span><span class="black2">Studio</span></a>
                 </li>
                 <li>
                     <a href="#">Студія</a>
@@ -41,38 +41,38 @@
        <li> <button>Маркетинг</button</li>
         </ul>
        <ul>
-        <li> <img src="../img/imgf1.png" alt="Технокряк">
+        <li> <img src="./img/imgf1.png" alt="Технокряк">
         <h3>Технокряк</h3>
-        <p>Веб-сайт</p></li>
-       <li> <img src="../img/imgf2.png" alt="Постер New Orlean vs Golden Star">
+        <p>Веб-сайт</p>
+       <img src="./img/imgf2.png" alt="Постер New Orlean vs Golden Star">
         <h3>Постер New Orlean vs Golden Star</h3>
-        <p>Дизайн</p></li>
-       <li> <img src="../img/imgf3.png" alt="Ресторан Seafood">
+        <p>Дизайн</p>
+       <img src="./img/imgf3.png" alt="Ресторан Seafood">
         <h3>Ресторан Seafood</h3>
-        <p>Додаток</p></li>
-       <li> <img src="../img/imgf4.png" alt="Проєкт Prime">
+        <p>Додаток</p>
+       <img src="./img/imgf4.png" alt="Проєкт Prime">
         <h3>Проєкт Prime</h3>
-        <p>Маркетинг</p></li>
-       <li> <img src="../img/imgi.png" alt="Проєкт Boxes">
-       <li> <h3>Проєкт Boxes</h3>
-       <li> <p>Додаток</p></li>
-       <li> <img src="../img/imgf5.png" alt="Inspiration has no Borders">
+        <p>Маркетинг</p>
+       <img src="../img/imgi.png" alt="Проєкт Boxes">
+       <h3>Проєкт Boxes</h3>
+       <p>Додаток</p>
+       <img src="./img/imgf5.png" alt="Inspiration has no Borders">
         <h3>Inspiration has no Borders</h3>
-        <p>Веб-сайт</p></li>
-       <li> <img src="../img/imgf7.png" alt="Видання Limited Edition">
+        <p>Веб-сайт</p>
+       <img src="./img/imgf7.png" alt="Видання Limited Edition">
         <h3>Видання Limited Edition</h3>
-        <p>Дизайн</p></li>
-       <li> <img src="../img/imgf8.png" alt="Проєкт LAB">
+        <p>Дизайн</p>
+       <img src="./img/imgf8.png" alt="Проєкт LAB">
         <h3>Проєкт LAB</h3>
-        <p>Маркетинг</p></li>
-       <li> <img src="../img/imgf9.png" alt="Growing Business">
+        <p>Маркетинг</p>
+       <img src="./img/imgf9.png" alt="Growing Business">
         <h3>Growing Business</h3>
         <p>Додаток</p></li>
     </ul>
     </section>
     </main>
     <footer>
-        <a href="#">WebStudio</a>
+        <a href="#" id="webstydio-link">WebStudio</a>
      
         <address>
                 м. Київ, пр-т Лесі Українки, 26
