--- a/index.html
+++ b/index.html
@@ -60,33 +60,34 @@
     </section>
     <section>
     <h3>Чим займаємося</h3>
-    <img src="../img/img.png" alt="Написання коду">
-    <img src="../img/box 2.png" alt="Розробка сайту">
-    <img src="../img/box 3.png" alt="Дизайн сайту">
+    <img src="./img/img.png" alt="Написання коду">
+    <img src="./img/box 2.png" alt="Розробка сайту">
+    <img src="./img/box 3.png" alt="Дизайн сайту">
     </section>
     <section>
     <h3>Наша команда</h3>
 <ul>
-    <li><img src="../img/img (3).jpg" alt="молодяга в коричневій сорочці" width="270" height="260"></li>
-            <li><h3>Ігор Дем'яненко</h3>
-    <p>Розробник сайту</p></li>
-    <li><img src="../img/persona.jpg" alt=" жінка в чорному піджаку" width="270" height="260"></li>
+    <li><img src="./img/img (3).jpg" alt="молодяга в коричневій сорочці" width="270" height="260">
+        <h3>Ігор Дем'яненко</h3>
+    <p>Розробник сайту</p>
+<img src="./img/persona.jpg" alt=" жінка в чорному піджаку" width="270" height="260">
             <li><h3>Ольга Рєпіна</h3>
-       <p>Тестувальник</p></li>      
-    <li><img src="../img/img (1).jpg" alt="молодяга в блакиній сорочці" width="270" height="260"></li>
+       <p>Тестувальник</p>   
+<img src="./img/img (1).jpg" alt="молодяга в блакиній сорочці" width="270" height="260">
 
-    <li><h3>Микола Тарасов</h3>
-     <p>веб дизайнер</p></li>   
+<h3>Микола Тарасов</h3>
+     <p>веб дизайнер</p>   
     
-    <li><img src="../img/img (2).jpg" alt="молодяга в чорній футболці " width="270" height="260"></li>
+<img src="./img/img (2).jpg" alt="молодяга в чорній футболці " width="270" height="260">
           
-    <li><h3>Михайло Єрмаков</h3>
+    <h3>Михайло Єрмаков</h3>
     <p>QA-інженер</p></li>
 </ul>
 </section>
 </main>
      <footer>
-    <a href="#"><span class="blue2">Web</span><span class="white">Studio</span></a>
+        <a href="#" id="webstydio-link">Webstydio</a>
+
  
     <address>
             м. Київ, пр-т Лесі Українки, 26
