--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 </ul>
 </section>
 </main>
-     <footer class="footer">
-        <a href="#" id="webstydio-link">Webstydio</a>
+     <footer>
+        <a href="#" id="webstydio-link"><span class="blue">Web</span><span class="blue-black">Studio</span></a>
 
  
     <address class="address">
