--- a/index.html
+++ b/index.html
@@ -36,10 +36,14 @@
             <h1>
                 Ефективні рішення для вашого бізнесу
         </h1>
+        <ul>
+        <li>
         <button>Замовити послугу</button>
+        </li>
+        </ul>
         </section>
     <section>
-        <ul>
+        <ul class="list-title">
         <li>
            <h3> УВАГА ДО ДЕТАЛЕЙ</h3>
            <p> Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
