--- a/index.html
+++ b/index.html
@@ -36,54 +36,51 @@
             <h1>
                 Ефективні рішення для вашого бізнесу
         </h1>
-        <ul>
-        <li>
         <button>Замовити послугу</button>
-        </li>
-        </ul>
         </section>
     <section>
-        <ul class="list-title">
+        <ul>
         <li>
-           <h3> УВАГА ДО ДЕТАЛЕЙ</h3>
-           <p> Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+           <h3 class="list-title"> УВАГА ДО ДЕТАЛЕЙ</h3>
+           <p  class="list-paragraf"> Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
         </li>
         <li>
-           <h3> ПУНКТУАЛЬНІСТЬ</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.  </p>
+           <h3 class="list-title"> ПУНКТУАЛЬНІСТЬ</h3>
+            <p  class="list-paragraf">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.  </p>
         </li>
         <li>
-            <h3>ПЛАНУВАННЯ</h3>
-       <p> Так само консультація з широким активом значною мірою зумовлює.</p>
+            <h3 class="list-title">ПЛАНУВАННЯ</h3>
+       <p  class="list-paragraf"> Так само консультація з широким активом значною мірою зумовлює.</p>
     </li>
         <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-        <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <h3 class="list-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+        <p  class="list-paragraf">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
     </li>
     </ul>
     </section>
     <section>
-    <h3>Чим займаємося</h3>
+    <h2>Чим займаємося</h2>
     <img src="./img/img.png" alt="Написання коду">
     <img src="./img/box 2.png" alt="Розробка сайту">
     <img src="./img/box 3.png" alt="Дизайн сайту">
     </section>
     <section>
-    <h3>Наша команда</h3>
 <ul>
-    <li><img src="./img/img (3).jpg" alt="молодяга в коричневій сорочці" width="270" height="260">
+    <li>
+        <h2>Наша команда</h2>
+        <img src="./img/img (3).jpg" alt="молодяга в коричневій сорочці" width="270" height="260">
         <h3>Ігор Дем'яненко</h3>
     <p>Розробник сайту</p>
-<img src="./img/persona.jpg" alt=" жінка в чорному піджаку" width="270" height="260">
+
+    <img src="./img/persona.jpg" alt=" жінка в чорному піджаку" width="270" height="260">
             <li><h3>Ольга Рєпіна</h3>
        <p>Тестувальник</p>   
-<img src="./img/img (1).jpg" alt="молодяга в блакиній сорочці" width="270" height="260">
 
+    <img src="./img/img (1).jpg" alt="молодяга в блакиній сорочці" width="270" height="260">
 <h3>Микола Тарасов</h3>
      <p>веб дизайнер</p>   
-    
-<img src="./img/img (2).jpg" alt="молодяга в чорній футболці " width="270" height="260">
-          
+
+    <img src="./img/img (2).jpg" alt="молодяга в чорній футболці " width="270" height="260">  
     <h3>Михайло Єрмаков</h3>
     <p>QA-інженер</p></li>
 </ul>
