--- a/index.html
+++ b/index.html
@@ -67,21 +67,21 @@
     <section>
 <ul>
     <li>
-        <h2>Наша команда</h2>
+        <h2 class="list-name">Наша команда</h2>
         <img src="./img/img (3).jpg" alt="молодяга в коричневій сорочці" width="270" height="260">
-        <h3>Ігор Дем'яненко</h3>
+        <h3 class="list-name">Ігор Дем'яненко</h3>
     <p>Розробник сайту</p>
 
     <img src="./img/persona.jpg" alt=" жінка в чорному піджаку" width="270" height="260">
-            <li><h3>Ольга Рєпіна</h3>
+            <h3 class="list-name">Ольга Рєпіна</h3>
        <p>Тестувальник</p>   
 
     <img src="./img/img (1).jpg" alt="молодяга в блакиній сорочці" width="270" height="260">
-<h3>Микола Тарасов</h3>
+<h3 class="list-name">Микола Тарасов</h3>
      <p>веб дизайнер</p>   
 
     <img src="./img/img (2).jpg" alt="молодяга в чорній футболці " width="270" height="260">  
-    <h3>Михайло Єрмаков</h3>
+    <h3 class="list-name">Михайло Єрмаков</h3>
     <p>QA-інженер</p></li>
 </ul>
 </section>
