--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
                     <a href="#" class="link" ><span class="blue">Web</span><span class="black2">Studio</span></a>
                 </li>
                 <li>
-                    <a href="#">Студія</a>
+                    <a href="#"  class="navigation-links">Студія</a>
                 </li>
                 <li>
-                    <a href="./portfolio.html">Портфоліо</a>
+                    <a href="./portfolio.html" class="navigation-links">Портфоліо</a>
                 </li>
                 <li>
-                    <a href="#">Контакти</a>
+                    <a href="#"  class="navigation-links">Контакти</a>
                 </li>
                 <li>
-                    <a href="mailto: info@devstudio.com">info@devstudio.com</a>
+                    <a href="mailto: info@devstudio.com" class="navigation-link">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel: +380961111111">+38 096 111 11 11</a>
+                    <a href="tel: +380961111111" class="navigation-link">+38 096 111 11 11</a>
                 </li>
             </ul>
         </nav>
